--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ js-sys = "0.3"
 wasm-bindgen = "0.2"
 yew = "*"
 gloo-render = "0.1"
+rand = { version = "*", features = ["wasm-bindgen"] }
 
 [dependencies.web-sys]
 version = "0.3"
